--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -516,7 +516,7 @@ width: 100%;
                     <div class="col-lg-7">
                         <h1 class="display-5 fw-bold mb-3 text-dark">Free Weekly Productivity Insights</h1>
                         <div class="header-intro-text">
-                            <p class="mb-4">Sign up for Sunday Snippets - my weekly newsletter where I share actionable productivity tips, practical life advice, and high-quality insights from across the web, directly to your inbox.</p>
+                            <p class="mb-4">Sign up for Sunday Unveiled - my weekly newsletter where I share actionable productivity tips, practical life advice, and high-quality insights from across the web, directly to your inbox.</p>
                         </div>
                         <h3 class="fs20 mt1" style="color: #333;">Join over 350,000 friendly readers</h3>
                         <div class="form-ss">
